infra/microk8s/06-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: log-friends-ingress
  namespace: log-friends
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: public
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: log-friends-console
                port:
                  number: 8080
          - path: /ingest
            pathType: Prefix
            backend:
              service:
                name: log-friends-console
                port:
                  number: 8080
          - path: /actuator
            pathType: Prefix
            backend:
              service:
                name: log-friends-console
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: log-friends-console-web
                port:
                  number: 3000
